--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,17 @@
 version: '3.8'
+
 services:
-  db:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_DB: bugbounty
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: yourpassword
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+  mongo:
+    image: mongo:latest  
+    container_name: mongo
+    restart: unless-stopped
     ports:
-      - "5432:5432"
-    networks:
-      - watcher_net
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: user
+      MONGO_INITDB_ROOT_PASSWORD: supersecurepassword
+    volumes:
+      - mongo-data:/data/db
 
 volumes:
-  pgdata:
-
-networks:
-  watcher_net:
+  mongo-data:
